--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant KEA</title>
+    <title>Home | Restaurant KEA</title>
 </head>
 <body>
     <header>
         <h1>Restaurant KEA</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" title="Home page">Home</a></li>
+                <li><a href="menu.html" title="Menu page">Menu</a></li>
+                <li><a href="contact.html" title="Contact page">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -33,17 +33,13 @@
         </section>
         <section>
             <blockquote>
-                Dining at Restaurant KEA has truly been one of the greatest experiences of my life. Words cannot express the pleasure that I felt while tasting these amazing flavours. It makes all other restaurants pale in comparison, in Denmark and elsewhere.
-            </blockquote>
-            <blockquote>
-                -Mette J. Christensen, <em>The Food Connoisseur</em>
+                <p>Dining at Restaurant KEA has truly been one of the greatest experiences of my life. Words cannot express the pleasure that I felt while tasting these amazing flavours. It makes all other restaurants pale in comparison, in Denmark and elsewhere.</p>
+                <p>-Mette J. Christensen, <em>The Food Connoisseur</em></p>
             </blockquote>
         </section>    
     </main>
     <footer>
-        <p>
-            &copy; 2024 KEA Development
-        </p>
+        <p>&copy; 2024 KEA Development</p>
     </footer>
 </body>
 </html>
